--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>texto Artigo 001</p>
+            <h2>Curso Grátis</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat tempore id tenetur, libero impedit voluptatibus amet natus, consequatur asperiores, dicta laborum exercitationem quasi voluptates aspernatur excepturi minus ducimus ipsa soluta?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Java</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellendus commodi sequi? Quasi suscipit ea tempore animi cumque sapiente blanditiis, quidem tempora, aliquid minima omnis et doloremque ipsa praesentium obcaecati.</p>
         </article>
     </main>
 </body>
