--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <header>
             <h1>Melhores Youtubers My tier list</h1>
-            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
+            <img id="tier" src="imagens/tier" alt="Tier list">
         </header>
         <article>
             <h2>EduU</h2>
