--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <h2>EduU</h2>
             <img class="lado" src="imagens/Edu.jpg" alt="EduUu">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat tempore id tenetur, libero impedit voluptatibus amet natus, consequatur asperiores, dicta laborum exercitationem quasi voluptates aspernatur excepturi minus ducimus ipsa soluta?</p>
-            <p><a href="">Games EduUu</a></p>
+            <p><a href="https://www.youtube.com/@GamesEduUu">Games EduUu</a></p>
         </article>
         <article>
             <h2>Alanzoka</h2>
             <img class="lado" src="imagens/Alan.png" alt="Alan">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellendus commodi sequi? Quasi suscipit ea tempore animi cumque sapiente blanditiis, quidem tempora, aliquid minima omnis et doloremque ipsa praesentium obcaecati.</p>
-            <p><a href="">Alanzoka</a></p>
+            <p><a href="youtube.com/@LivesAlanzoka">Alanzoka</a></p>
         </article>
     </main>
 </body>
