--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>Alanzoka</h2>
             <img class="lado" src="imagens/Alan.png" alt="Alan">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellendus commodi sequi? Quasi suscipit ea tempore animi cumque sapiente blanditiis, quidem tempora, aliquid minima omnis et doloremque ipsa praesentium obcaecati.</p>
-            <p><a href="youtube.com/@LivesAlanzoka">Alanzoka</a></p>
+            <p><a href="https://www.youtube.com/@LivesAlanzoka">Alanzoka</a></p>
         </article>
     </main>
 </body>
